# nclav

./: .dockerignore  .gitignore  BOOTSTRAP.md  Cargo.toml  Dockerfile  GCP.md  ISOLATION.md  Makefile  PARTITIONS.md  PLAN.md  PRD.md  README.md
bootstrap/aws/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
bootstrap/azure/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
bootstrap/gcp/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
crates/nclav-api/: Cargo.toml
crates/nclav-api/src/: app.rs  auth.rs  error.rs  handlers.rs  lib.rs  state.rs
crates/nclav-cli/: Cargo.toml
crates/nclav-cli/src/: cli.rs  commands.rs  main.rs  output.rs
crates/nclav-config/: Cargo.toml
crates/nclav-config/src/: error.rs  lib.rs  loader.rs  raw.rs
crates/nclav-config/tests/: loading.rs
crates/nclav-config/tests/fixtures/valid_enclave/: config.yml
crates/nclav-config/tests/fixtures/valid_enclave/svc/: config.yml
crates/nclav-domain/: Cargo.toml
crates/nclav-domain/src/: error.rs  lib.rs  tests.rs  types.rs
crates/nclav-driver/: Cargo.toml
crates/nclav-driver/src/: aws.rs  azure.rs  driver.rs  error.rs  gcp.rs  lib.rs  local.rs  registry.rs  terraform.rs
crates/nclav-graph/: Cargo.toml
crates/nclav-graph/src/: error.rs  lib.rs  validate.rs
crates/nclav-reconciler/: Cargo.toml
crates/nclav-reconciler/src/: error.rs  lib.rs  reconcile.rs  report.rs
crates/nclav-reconciler/tests/enclaves/product-a/dev/: config.yml
crates/nclav-reconciler/tests/enclaves/product-a/dev/db/: config.yml
crates/nclav-store/: Cargo.toml
crates/nclav-store/src/: error.rs  lib.rs  memory.rs  postgres_store.rs  redb_store.rs  state.rs  store.rs
docs/: api-reference.md  bootstrap-aws.md  bootstrap-azure.md  bootstrap-gcp.md  cli-reference.md  enclave-yaml.md
docs/prd/: AWS.md  AZURE.md  BOOTSTRAP.md  GCP.md  ISOLATION.md  PARTITIONS.md  README.md
enclaves/gitea/app/: config.yml
enclaves/gitea/app/app/: config.yml  main.tf
enclaves/gitea/db/: config.yml
enclaves/gitea/db/postgres/: config.yml  main.tf
enclaves/product-a/dev/: config.yml
enclaves/product-a/dev/api/: config.yml  main.tf
enclaves/product-a/dev/db/: config.yml  main.tf
