[package]
name = "nclav-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nclav"
path = "src/main.rs"

[dependencies]
nclav-domain     = { workspace = true }
nclav-config     = { workspace = true }
nclav-graph      = { workspace = true }
nclav-store      = { workspace = true }
nclav-driver     = { workspace = true }
nclav-reconciler = { workspace = true }
nclav-api        = { workspace = true }
clap             = { workspace = true }
tokio            = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
uuid             = { workspace = true }
axum             = { workspace = true }
reqwest          = { workspace = true }
anyhow           = { workspace = true }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }
