[package]
name = "nclav-config"
version = "0.1.0"
edition = "2021"

[dependencies]
nclav-domain = { workspace = true }
serde        = { workspace = true }
serde_yaml   = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }

[dev-dependencies]
