[package]
name = "nclav-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
nclav-domain = { workspace = true }
async-trait  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
reqwest      = { workspace = true }
gcp_auth     = { workspace = true }

[dev-dependencies]
wiremock     = "0.6"
tokio        = { workspace = true }
