[package]
name = "nclav-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
nclav-domain = { workspace = true }
nclav-store  = { workspace = true }
async-trait  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
reqwest      = { workspace = true }
gcp_auth     = { workspace = true }
base64       = { workspace = true }
chrono       = { workspace = true }
uuid         = { workspace = true }
sha2         = { workspace = true }
hmac         = { workspace = true }
quick-xml    = { version = "0.37", features = ["serialize"] }

[dev-dependencies]
wiremock     = "0.6"
tokio        = { workspace = true }
