[package]
name = "nclav-reconciler"
version = "0.1.0"
edition = "2021"

[dependencies]
nclav-domain = { workspace = true }
nclav-config = { workspace = true }
nclav-graph  = { workspace = true }
nclav-store  = { workspace = true }
nclav-driver = { workspace = true }
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
chrono       = { workspace = true }
uuid         = { workspace = true }
