[package]
name = "nclav-store"
version = "0.1.0"
edition = "2021"

[dependencies]
nclav-domain = { workspace = true }
async-trait  = { workspace = true }
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
chrono       = { workspace = true }
uuid         = { workspace = true }
sha2         = { workspace = true }
redb         = "2"
sqlx         = { version = "0.8", features = [
    "runtime-tokio", "tls-rustls", "postgres",
    "uuid", "chrono", "json",
] }

[dev-dependencies]
tempfile = "3"
